FIX; Make color darker for disabled field so that it has enough contrast with background

--- a/src/assets/toolkit/styles/6-components/_components.forms.scss
+++ b/src/assets/toolkit/styles/6-components/_components.forms.scss
@@ -127,7 +127,7 @@
     }
 
     &:disabled {
-      color: $grey-chalice;
+      color: $grey-dusty;
       background-color: $grey-alto;
     }
   }
